@@ -1,4 +1,5 @@
 1.1.0
+   - bug [10105] "Fjern funktionen getData fra harvesterne"
    - bug [10690] "Sikring af at data i JavaScripts i samme scopes ikke bliver delt"
    - bug [10825] "Potentielt problem i brug af globale variable i JavaScripts"
    - bug [10689] "Fornuftig håndtering af exceptions skal implementeres i RhinoWrapper"
